# copa_transparente

./: .gitignore  README.md  domain.py  pyproject.toml  requirements.txt
blog/: .flaskenv  requirements.txt
blog/app/: __init__.py  config.py  email.py  forms.py  models.py  routes.py
blog/app/templates/: 404.html  _post.html  base.html  edit_profile.html  index.html  login.html  register.html  reset_password.html  reset_password_request.html  user.html
commands/: download_data.py
desafios/: __init__.py  adiciona_pontos.py  adivinhe.py  contagem_script1.py  contagem_script2.py  duplicados.py  interface.py  teste_abstrato.py  time_this.py  tmdb_5000.ipynb  total_gasto.py  uri1098.py  valor_total_assinado.py  wikipython1.py  wikipython11.py  wikipython13.py  wikipython3.py  wikipython4.py
desafios/.ipynb_checkpoints/: tmdb_5000-checkpoint.ipynb
desafios/assets/: books.xml
django/: .env  Makefile  db.sqlite3
django/blog/: admin.py
django/blog/migrations/: 0001_initial.py
django/blog/templates/blog/: post_list.html
django/mysite/: settings.py
exemplos/: 11_02_named_tuple.py  13_02_dict_comp.py  arvore.py  banco_abstrato.py  classe_superclasse.py  compras.py  dict_comp.py  empresas_por_valor.py  exemplos.py  por_ano.py  tempo_pequeno.py  test_exemplos.py  total_gasto_2009_2010.py
unit_tests/: test_dos_pontos.py  test_script1.py  test_script2.py
