[tool.poetry]
name = "copa_transparente"
version = "0.2.0"
description = "Copa Transparente"
authors = ["Vinicius Melo <vinimmelo.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
